# WinUI-dev

./: MainWindow.xaml  MainWindow.xaml.cs  README.md  XrayUI-dev.csproj
.github/workflows/: release.yml
Helpers/: GlobalHotkeyStore.cs  L.cs  ThemeHelper.cs  WindowModeTransition.cs
Models/: AppSettings.cs  CustomRoutingRule.cs  ServerEntry.cs
Properties/PublishProfiles/: win-x64.pubxml
Services/: AiUnlockCheckService.cs  DialogService.cs  RealLatencyProbeService.cs  SettingsService.cs  XrayConfigBuilder.cs
Strings/en-US/: Resources.resw
Strings/zh-CN/: Resources.resw
ViewModels/: BaseViewModel.cs  ControlPanelViewModel.cs  CustomRulesViewModel.cs  MainViewModel.cs  ManageSubscriptionsViewModel.cs  PersonalizeViewModel.cs  ServerDetailViewModel.cs  ServerListViewModel.cs
Views/: AddChainProxyDialog.xaml  AddRuleDialog.xaml  AddRuleDialog.xaml.cs  ControlPanelControl.xaml  CustomRulesWindow.xaml  CustomRulesWindow.xaml.cs  LogWindow.xaml  LogWindow.xaml.cs  ManageSubscriptionsDialog.xaml  PersonalizeControl.xaml  PersonalizeControl.xaml.cs  ServerListControl.xaml  ServerListControl.xaml.cs
updater-rs/: Cargo.toml  build.rs
updater-rs/src/: main.rs
